Fix markdown url syntax

--- a/notebooks/neural_network_classifier.ipynb
+++ b/notebooks/neural_network_classifier.ipynb
@@ -418,7 +418,7 @@
    "metadata": {},
    "source": [
     "### An Inception layer, but with fully connected layers.\n",
-    "Inspired by the now world-famous paper by Google employees (InceptionV1)[https://arxiv.org/pdf/1409.4842.pdf] that uses parallel convolutions to make better use of the immense parallelization capabilities GPUs provide to start growing neural networks girth-wise instead of only depth-wise, we created this LinearInception module.\n",
+    "Inspired by the now world-famous paper by Google employees [InceptionV1](https://arxiv.org/pdf/1409.4842.pdf) that uses parallel convolutions to make better use of the immense parallelization capabilities GPUs provide to start growing neural networks girth-wise instead of only depth-wise, we created this LinearInception module.\n",
     "We thought this would give our model a bigger receptive field and that that would give us a huge gain in accuracy, but we were wrong."
    ]
   },
@@ -548,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ConvNet só para não perder o costume.\n",
+    "### ConvNet só para não perder o costume.\n",
     "\n",
     "Duas convs e uma fully connected layer no final para dizer minhas classes.\n",
     "Depois de cada conv, uma relu para introduzir não-linearidade e um MaxPooling para reduzir o tamanho conforme a dimensionalidade aumenta."
@@ -663,7 +663,7 @@
     "### State of the art\n",
     "Estado da arte (sem deep learning) do dataset que escolhemos é 89.7% accuracy e o modelo usado é um SVC (roda em tempo quadrático em relação ao número de instâncias) e foi treinado por 1h12min (mais detalhes http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/), enquanto nossos modelos todos demoram menos de 1 minuto para serem treinados.\n",
     "\n",
-    "Estado da arte atual do dataset é do github user (@ajbrock)[https://github.com/ajbrock] com 96.7% de accuracy usando uma (wide residual network)[https://arxiv.org/pdf/1605.07146.pdf] de 40 camadas e largura 4 (8,9M paramêtros).\n",
+    "Estado da arte atual do dataset é do github user [@ajbrock](https://github.com/ajbrock) com 96.7% de accuracy usando uma [wide residual network](https://arxiv.org/pdf/1605.07146.pdf) de 40 camadas e largura 4 (8,9M paramêtros).\n",
     "\n",
     "### Our results\n",
     "Our data augmentation steps are just standard preprocessing (mean/std subtraction/division) and random horizontal flips.\n",
